# wasmstar

./: .gitignore  Cargo.toml  Makefile
.github/: tests.yml
artifacts/: checksums.txt  checksums_intermediate.txt  super_star.wasm
js/: package-lock.json  package.json  types.ts
js/config/: chains.ts  nois.ts
js/interfaces/: SuperStar.client.ts  SuperStar.types.ts
js/scripts/: deploy.ts  instantiate.ts  migrate.ts  types.ts  update.ts  upload.ts
js/types/: SuperStar.types.ts
schema/: super-star.json
src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs  tests.rs
src/example/: schema.rs
src/schema/: super-star.json
